@@ -1,0 +1,19 @@
+Moodles_EN {
+	Moodles_Defecation_Bad_lvl1 = "Mild Pressure",
+	Moodles_Defecation_Bad_desc_lvl1 = "Your stomach feels uneasy.",
+	Moodles_Defecation_Bad_lvl2 = "Rumbling Gut",
+	Moodles_Defecation_Bad_desc_lvl2 = "Your bowels are making their presence known.",
+	Moodles_Defecation_Bad_lvl3 = "Heavy Load",
+	Moodles_Defecation_Bad_desc_lvl3 = "The need to go is becoming unbearable.",
+	Moodles_Defecation_Bad_lvl4 = "About to Blow",
+	Moodles_Defecation_Bad_desc_lvl4 = "Toilet. NOW!",
+
+	Moodles_Urination_Bad_lvl1 = "Slight Urge",
+	Moodles_Urination_Bad_desc_lvl1 = "Faint need to pee.",
+	Moodles_Urination_Bad_lvl2 = "Building Pressure",
+	Moodles_Urination_Bad_desc_lvl2 = "Your bladder is filling up.",
+	Moodles_Urination_Bad_lvl3 = "Full Bladder",
+	Moodles_Urination_Bad_desc_lvl3 = "The need is impossible to ignore.",
+	Moodles_Urination_Bad_lvl4 = "On the Verge",
+	Moodles_Urination_Bad_desc_lvl4 = "About to burst!",
+}
