@@ -2,3 +2,4 @@ name=Bathroom Functions
 poster=poster.png
 id=bathroomfunctions
 description=Realism in its harshest form.
+require=\MoodleFramework
