@@ -11,3 +11,6 @@
 - Pee in bottles
 - Filter out pee bottle
 - Sit on toilet (required for pooping or peeing [females only])
+
+- Urination Moodle
+- Defecation Moodle
