@@ -1,3 +1,7 @@
+12/19/24
+-Moved Translate to lua/shared to fix
+-
+
 12/18/24
 -Added original assets
 -Created "Urine" liquid type
